# Scop

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  Scop  Scop.cbp  cmake_install.cmake  imgui.ini  main.cpp
libs/: Makefile  cmake_install.cmake
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/imgui/: Makefile  cmake_install.cmake
libs/stb_image/: stb_image.cpp
res/shaders/: fshader.frag  vshader.vert
src/: App.cpp  App.hpp  Camera.hpp  Light.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  OBJLoader.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Vertex.hpp  main.cpp
